bk_ida/gccida/c0/copy_blkmode_from_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2639:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2651:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode fieldmode; // [rsp+1Ch] [rbp-B4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2701:39: error: invalid suffix 'xmode' on integer constant
srcrega = convert_to_mode( *(short *)0xmode, srcrega, ( *( ( _DWORD *)&type->common + 4) >> 13) & 1); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2715:31: error: invalid suffix 'orce' on integer constant
src = operand_sub*(short *)0xforce( srcrega, xbitpos / v9, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)srcrega)); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2715:62: error: use of undeclared identifier 'machine_mode'
src = operand_sub*(short *)0xforce( srcrega, xbitpos / v9, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)srcrega)); 
                                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2715:77: error: expected expression
src = operand_sub*(short *)0xforce( srcrega, xbitpos / v9, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)srcrega)); 
                                                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2715:7: error: use of undeclared identifier 'operand_sub'
src = operand_sub*(short *)0xforce( srcrega, xbitpos / v9, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)srcrega)); 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2737:24: error: invalid suffix 'xmode' on integer constant
fieldmode = *(short *)0xmode; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2738:78: error: invalid suffix 'xmode' on integer constant
bit_field = extract_bit_field( src, align, xbitpos % v13, 1, 0LL, *(short *)0xmode, *(short *)0xmode, v14); 
                                                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/expr.c:2738:96: error: invalid suffix 'xmode' on integer constant
bit_field = extract_bit_field( src, align, xbitpos % v13, 1, 0LL, *(short *)0xmode, *(short *)0xmode, v14); 
                                                                                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_blkmode_from_reg/src/obj/expr.o] Error 1
